added nalim bridge, it works, api is not scalable